글로벌로 폰트관리, Minigame 페이지 연결
글로벌로 폰트관리, Minigame 페이지 연결

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.7",
+    "scss": "^0.2.4",
     "simple-reveal": "^0.4.0",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
